--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -69,9 +69,13 @@
 			</div>
 			<!-- //header -->
 			<div class="banner-text">
-				<div class="container">		
+				<div class="container">
+					<br>
+					<span style="color:yellow; background-color: black;" class="badge badge-primary">created by (MOHAMMED AUSANAJALI)</span>
 					<h2>Get a Ride in seconds <br> call us now <span style="color: yellow;">099-017-1255</span></h2>
 					<a href="#about" class="buy btn-wayra scroll"> About Us</a>
+					<!-- <h3 style="color: white;">created by (MOHAMMED AUSANAJALI)</h3> -->
+					
 				</div> 
 			</div>
 		</div>
@@ -168,7 +172,7 @@
 						<h5><span>15</span> April </h5>
 						<h4>Suscipit dapib</h4>
 						<p>A new bike is available for rent</p>
-						<div class="article-links">
+						<div class="a	rticle-links">
 						</div>
 					</div>
 				</div>
