added the required proposal

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -71,7 +71,7 @@
 			<div class="banner-text">
 				<div class="container">
 					<br>
-					<span style="color:yellow; background-color: black;" class="badge badge-primary">created by (MOHAMMED AUSANAJALI)</span>
+					<span style="color:yellow; background-color: black;" class="badge badge-primary">created by (UMAIR ALI)</span>
 					<h2>Get a Ride in seconds <br> call us now <span style="color: yellow;">099-017-1255</span></h2>
 					<a href="#about" class="buy btn-wayra scroll"> About Us</a>
 					<!-- <h3 style="color: white;">created by (MOHAMMED AUSANAJALI)</h3> -->
@@ -87,9 +87,16 @@
 			<div class="welcome-agileinfo">
 				<div class="col-md-6 w3ls_welcome_left"> 
 					<div class="w3ls_welcome_right1">
-						<h3 class="agileits-title"><span>A</span>bout Us</h3>
+						<h3 class="agileits-title"><span>P</span>roject proposal</h3>
 						<!-- <h6>Lorem ipsum dolor <span> Consectetur </span> sit adipisicing. </h6> -->
-						<p>We are an australian based company that aims at providing faster, cheaper and quicker transportation across the country in motorbikes. We also aim at providing employment to all Bike owners who join our platform and freelance for deliveries and transport</p>
+						<p>
+							This is a web app that will allow customers to use their mobile phones and request for riders the same 
+							way they would ask for a Taxi or an uber. This project will give riders a digital platform to acquire customers
+							as well as link riders with customers who strictly need riders to get to their destination.
+							<br>
+							This project might pick up very fast in the future because there are not so many Taxi companies that strictly operate
+							with motorcyclists. 
+						</p>
 					</div> 
 				</div>
 				<div class="col-md-6 w3ls_welcome_right">  	
